--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,10 +4,13 @@
 
 @layer base {
   :root {
+    /* custom: */
+    --dark-background: 0 0% 10%;
+    --accent: 22, 65%, 57%;
+
+    /* shadcn: */
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
-
-    --dark-background: 0 0% 10%;
 
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
@@ -24,7 +27,7 @@
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
 
-    --accent: 210 40% 96.1%;
+    /* --accent: 210 40% 96.1%; */
     --accent-foreground: 222.2 47.4% 11.2%;
 
     --destructive: 0 84.2% 60.2%;
