--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@
     /* custom: */
     --dark-background: 0 0% 10%;
     --accent: 22, 65%, 57%;
-
+    --accent-hover: 22, 93%, 75%;
     /* shadcn: */
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
