--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,7 @@
     --dark-background: 0 0% 10%;
     --accent: 22, 65%, 57%;
     --accent-hover: 22, 93%, 75%;
+    --input: 0, 0%, 81%;
     /* shadcn: */
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
@@ -34,7 +35,6 @@
     --destructive-foreground: 210 40% 98%;
 
     --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
 
     --radius: 0.5rem;
