--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,6 +34,9 @@
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
 
+    --success: 122.9 39.3% 49.8%;
+    --success-foreground: 210 40% 98%;
+
     --border: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
 
